--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,8 @@
 
 @import "{{ site.theme }}";
 
+/* FROM https://help.github.com/articles/customizing-css-and-html-in-your-jekyll-theme/ */
+
 .image-wrapper{
   max-width: 70%;
   height:auto;
