--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,6 +4,7 @@
 @import "{{ site.theme }}";
 
 /* FROM https://help.github.com/articles/customizing-css-and-html-in-your-jekyll-theme/ */
+/* FROM http://erictoulson.com/2014/01/21/responsive-images-with-jekyll/ */
 
 .image-wrapper{
   max-width: 70%;
