--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,14 +7,15 @@
 /* FROM http://erictoulson.com/2014/01/21/responsive-images-with-jekyll/ */
 
 .image-wrapper{
-  max-width: 70%;
-  height:auto;
+  max-width: 55%;
+  height: auto;
   position: relative;
-  display:block;
+  left: 15px;
+  display: block;
   margin:0 auto;
 }
 
-.image-wrapper img{
+.image-wrapper img {
   max-width:100% !important;
   height:auto;
   display:block;
