--- a/_includes/image.html
+++ b/_includes/image.html
@@ -1,4 +1,9 @@
 <!-- FROM https://github.com/hakimel/reveal.js/issues/1349 -->
+
+
 <div class="image-wrapper">
+<figure>
     <img src="{{ include.url }}" alt="{{ include.description }}" />
+    <figcaption><a href="{{ include.url }}">{{ include.description }}</a></figcaption>
+</figure>
 </div>
